--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,55 @@
     </build>
     <dependencies>
 
-        <!-- Hibernate Validator -->
+        <!-- =============================================== -->
+        <!--   JPA Dependencies                              -->
+        <!-- =============================================== -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>${eclipse.jpa.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.2.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- =============================================== -->
+        <!--   Hibernate Dependencies                              -->
+        <!-- =============================================== -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>3.2.3.ga</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.2.1.ga</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -52,10 +100,6 @@
             <version>2.2</version>
         </dependency>
 
-
-        <!-- =============================================== -->
-        <!--   Our Dependencies                              -->
-        <!-- =============================================== -->
 
         <dependency>
             <groupId>org.slf4j</groupId>
