--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <includes>
+                        <include>*.JPG</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
@@ -175,19 +178,19 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        
+
         <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-jms</artifactId>-->
-            <!--<version>${spring.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>commons-logging</groupId>-->
-                    <!--<artifactId>commons-logging</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-jms</artifactId>-->
+        <!--<version>${spring.version}</version>-->
+        <!--<exclusions>-->
+        <!--<exclusion>-->
+        <!--<groupId>commons-logging</groupId>-->
+        <!--<artifactId>commons-logging</artifactId>-->
+        <!--</exclusion>-->
+        <!--</exclusions>-->
         <!--</dependency>-->
-        
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
